# hackaton_finance_team2

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
Dashboard/: index.html  styles.css
notebooks/: exploration_fraud.ipynb  model_ML.ipynb  preprocessing.ipynb
output/: exploration_summary.txt  fraud_predictions_submission.csv  label_encoders.pkl
output/models/: xgboost_fraud_model.pkl
watsonx/: Hackathon-finance-viz.ipynb  Rapport_model.html
